# FIFAWC2026-predictor

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/workflows/: ci.yml
engine/: pyproject.toml
engine/data/static/: ea_fc26_overalls.json  player_photos.json  squads_2026.json  squads_wikitext.json
engine/reports/: calibration.json  validation.json
engine/src/: __init__.py  build_squads.py  config.py  ea_ratings.py  elo.py  export.py  ingest.py  lineups.py  photos.py  ratings.py  real_squads.py  scorers.py  squad_data.py  teams.py
engine/tests/: test_metrics.py  test_ratings.py  test_teams_squads.py
engine/validate/: __init__.py  backtest.py  calibration.py  metrics.py
sim/: package.json  tsconfig.json
sim/src/: bracket.ts  context.ts  enrich.test.ts  enrich.ts  formations.ts  grade.test.ts  grade.ts  group.test.ts  group.ts  index.ts  livematch.test.ts  livematch.ts  match.ts  montecarlo.test.ts  montecarlo.ts  playthrough.test.ts  playthrough.ts  poisson.test.ts  poisson.ts  rng.ts  testutil.ts  thirds.test.ts  thirds.ts  thirdsTable.ts  tournament.test.ts  tournament.ts  types.ts  worker.ts
web/: index.html  package.json  tsconfig.app.json  vite.config.ts
web/public/data/: model.json
web/src/: main.tsx
web/src/app/: App.tsx  Footer.tsx  Header.tsx  app.css
web/src/components/: Confetti.tsx  CountUp.tsx  LineupPitch.tsx  MatchDetail.tsx  MatchResultCard.tsx  OddsRow.tsx  PlayerAvatar.tsx  ProbBar.tsx  ScoreHeatmap.tsx  TeamBadge.tsx  avatar.css  icons.tsx  lineup.css  match.css
(+74 files in other folders)
