[project]
name = "weltmeister-engine"
version = "0.1.0"
description = "Offline World Cup 2026 prediction engine: Dixon-Coles ratings, scorer and lineup models, model.json export, validation."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "requests>=2.31",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
scrape = [
    "soccerdata>=1.6",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
